force-app/main/default/objects/Grant_Disbursed__c/Grant_Disbursed__c.object-meta.xml
<CustomObject>
    <label>Grant Disbursed</label>
    <nameField>
        <label>Grant Disbursed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Disbursed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>