force-app/main/default/objects/Grant_Disbursed__c/fields/Is_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Is_Disbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disbursed</label>
    <type>Checkbox</type>
</CustomField>